[dfs] verify the CRCs of the sector IDs and the sector data.
Rename the CRC implementation file to crc16.cc (there are two
variants, now) and eliminate dependency on dfstypes.h.

This change includes a bugfix to the CRC16 code used to generate the
CRCs in INF files, so the golden output for extract-files also
changes.

--- a/dfs/CMakeLists.txt
+++ b/dfs/CMakeLists.txt
@@ -73,6 +73,7 @@ target_sources(dfslib
   driveselector.cc
   geometry.cc
   track.cc
+  crc16.cc # used in HFE reading and INF file writing.
   # File System implementation
   dfs_catalog.cc
   dfs_filesystem.cc
@@ -83,7 +84,6 @@ target_sources(dfslib
   fsp.cc
   afsp.cc
   # UI-ish
-  crc.cc  # used to build standard archive files.
   hexdump.cc
   # Header files.
   ${DFSBASE_HEADERS}
