--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,20 @@
-- name: build # based on cmake swiss army knife
-  uses: lpenz/ghaction-cmake@v0.9
-  with:
-    # Dependencies as Debian packages to install; used if defined
-    dependencies_debian: [zlib1-dev, gzip, groff, diffutils]
-    # cd to this directory; used if defined
-    directory: # optional, default is
-    # Initial flags for cmake; extended by presets
-    cmakeflags: -DPDF=ON -DCOVERAGE=ON
-    # Build command to use; override presets
-    build_command: # optional, default is
-    # Test command to use; override presets
-    test_command: # optional, default is
-    # Command to run after tests; override presets
-    post_command: # optional, default is
-    # Preset to use:
-- cppcheck
-- iwyu
-- clang-tidy
-- clang-sanitize-*
-- valgrind
-- coverage
-- install
+# based on cmake swiss army knife
+name: CI
+on: [push, pull_request]
+jobs:
+  # Regular C build with two compilers, using the environment:
+  build_using_compiler_in_environment:
+    strategy:
+        matrix:
+          compiler:
+            - gcc
+            - clang
+    runs-on: ubuntu-latest
+    # We can use cmakeflags for this, or we can just use
+    # regular environment variables, as they are already
+    # supported by github actions:
+    env:
+      - CC: ${{ matrix.compiler }}
+    steps:
+      - uses: actions/checkout@master
+      - uses: docker://lpenz/ghaction-cmake:v0.9
