--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,19 +2,16 @@
 name: CI
 on: [push, pull_request]
 jobs:
-  # Regular C build with two compilers, using the environment:
-  build_using_compiler_in_environment:
+  build_using_compiler_in_cmakeflags:
     strategy:
         matrix:
           compiler:
             - gcc
             - clang
     runs-on: ubuntu-latest
-    # We can use cmakeflags for this, or we can just use
-    # regular environment variables, as they are already
-    # supported by github actions:
-    env:
-      - CC: ${{ matrix.compiler }}
     steps:
       - uses: actions/checkout@master
+      # This examples uses the appropriate cmakeflags
       - uses: docker://lpenz/ghaction-cmake:v0.9
+        with:
+          cmakeflags: ${{ format('-DCMAKE_C_COMPILER={0}', matrix.compiler) }}
