[CI] try moving the depdendencies to global defaults.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 # based on cmake swiss army knife
 name: CI
 on: [push, pull_request]
-with:
+defaults:
   dependencies_debian: [zlib1-dev, gzip, groff, diffutils]
 jobs:
   build_using_compiler_in_cmakeflags:
