--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
       - uses: docker://lpenz/ghaction-cmake:v0.9
         with:
           cmakeflags: ${{ format('-DCMAKE_C_COMPILER={0}', matrix.compiler) }}
-          dependencies_debian: zlib1g-dev gzip groff diffutils unzip
+          dependencies_debian: zlib1g-dev gzip groff diffutils unzip coreutils
