[CI] the static analyzers need enough dependencies to run cmake.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,4 @@ jobs:
       - uses: docker://lpenz/ghaction-cmake:v0.9
         with:
           preset: ${{ matrix.preset }}
+          dependencies_debian: zlib1g-dev gzip groff
