Add a cmake option for turning on IWYU checks.  Fix some.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,9 @@ jobs:
   linters:
     strategy:
         matrix:
-          preset: [ cppcheck, iwyu, clang-tidy ]
+	  # Do not enable iwyu by default, it produces
+	  # some erroneous results.
+          preset: [ cppcheck, clang-tidy ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
