--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,19 @@ project(beebtools)
 
 option(PDF "Generate pdf format documentation" OFF)
 option(COVERAGE "Measure test coverage" OFF)
+option(IWYU "Perform include-what-you-use static code analysis" OFF)
 
+if (IWYU)
+  message(VERBOSE "The include-what-you-use static analyzer is enabled")
+  find_program(IWYU_PATH NAMES include-what-you-use iwyu)
+  if(NOT IWYU_PATH)
+    message(FATAL_ERROR "Could not find the program include-what-you-use; you can disable IWYU with -DIWYU=OFF")
+  endif()
+  set(CMAKE_CXX_INCLUDE_WHAT_YOU_USE ${IWYU_PATH})
+  set(CMAKE_C_INCLUDE_WHAT_YOU_USE ${IWYU_PATH})
+else (IWYU)
+  message(VERBOSE "The include-what-you-use static analyzer is NOT enabled")
+endif (IWYU)
 
 enable_testing()
 if (COVERAGE)
