[dfs] make tests fail if they don't clean up temporary files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,7 @@ endif()
 
 set(EXTRA_WARNING_OPTIONS
      $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:GNU>>:
-          -Wall -Wextra -Wconversion -Wpedantic>
+          -Wall -Wextra  -Wpedantic>
      $<$<CXX_COMPILER_ID:MSVC>:
           /W4>)
 add_subdirectory(basic)
