[dfs] Added a parser for HxC MFM files.  Non-functional as yet.
The main reason this is non-functional is that there is no MFM
bitstream parser yet.

--- a/dfs/CMakeLists.txt
+++ b/dfs/CMakeLists.txt
@@ -78,6 +78,7 @@ target_sources(dfslib
   # Disc image file handling
   img_fileio.cc
   img_hfe.cc
+  img_hxcmfm.cc
   img_mmb.cc
   img_sdf.cc
   img_load.cc
