[dfs] Split FM and MFM code into separate files.

--- a/dfs/CMakeLists.txt
+++ b/dfs/CMakeLists.txt
@@ -89,6 +89,8 @@ target_sources(dfslib
   driveselector.cc
   geometry.cc
   track.cc
+  track_fm.cc
+  track_mfm.cc
   crc16.cc # used in HFE reading and INF file writing.
   # File System implementation
   dfs_catalog.cc
